[gd_scene load_steps=3 format=3 uid="uid://c10axebk4r6j"]

[ext_resource type="Script" uid="uid://byecttlve0sbv" path="res://addons/SIFB/result_base.gd" id="1_lpay1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8y074"]
bg_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ResultBase" type="PanelContainer"]
offset_right = 260.0
offset_bottom = 62.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8y074")
script = ExtResource("1_lpay1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -5

[node name="nodeInfo" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="node" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/nodeInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.842564, 0.786253, 0.598538, 1)
text = "Node: "

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/nodeInfo"]
layout_mode = 2
mouse_filter = 2
expand_mode = 4
stretch_mode = 3

[node name="NodeName" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/nodeInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.842564, 0.786253, 0.598538, 1)
text = "node name"

[node name="Filepath_" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.956863, 1)
text = "Filepath:"

[node name="path" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.443137, 0.737255, 0.988235, 1)
text = "path/"

[node name="file" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.780392, 0.596078, 1)
text = "file.gd"

[node name="LineNo" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.619608, 0.623529, 0.627451, 1)
text = " - LineNo:"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="number" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 20
text = "90:
"

[node name="prevLine" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.654902)
theme_override_font_sizes/font_size = 17
text = "File where it was found - LineNo:"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -1

[node name="number" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 20
text = "91: "

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="prekLine" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "aaa"

[node name="kLine" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "aaa"

[node name="ColorRect" type="ColorRect" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer/HBoxContainer/kLine"]
modulate = Color(0.866667, 0.886275, 0.556863, 0.203922)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="postkLine" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "aaa"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="number" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.760784, 0.658824, 1)
theme_override_font_sizes/font_size = 20
text = "92:"

[node name="postLine" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.654902)
theme_override_font_sizes/font_size = 17
text = "File where it was found - LineNo:"
